--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -5,6 +5,7 @@ fastapi==0.109.0
 flake8==7.0.0
 gunicorn==21.0.1
 httpx==0.26.0
+isort==5.13.2
 pydantic-settings==2.1.0
 pytest==7.4.4
 pytest-cov==4.1.0
